// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with a cost 1`] = `
<section>
  <h2
    className="Callout-title"
  >
    Mine
  </h2>
  <p
    className="Callout-paragraph"
  >
    Type: 
    Raw material
  </p>
  <section
    className="CalloutSection"
  >
    <h3
      className="CalloutSection-heading"
    >
      This card awards
      :
    </h3>
    <ul
      className="CalloutSection-list"
    >
      <li>
        1 Ore or Stone
      </li>
    </ul>
  </section>
  <section
    className="CalloutSection"
  >
    <h3
      className="CalloutSection-heading"
    >
      It costs
      :
    </h3>
    <ul
      className="CalloutSection-list"
    >
      <li>
        1 coin
      </li>
    </ul>
  </section>
  <p
    className="Callout-paragraph"
  >
    It will cost 1 coin to build this structure.
  </p>
</section>
`;

exports[`renders with chained structures 1`] = `
<section>
  <h2
    className="Callout-title"
  >
    Apothecary
  </h2>
  <p
    className="Callout-paragraph"
  >
    Type: 
    Science
  </p>
  <section
    className="CalloutSection"
  >
    <h3
      className="CalloutSection-heading"
    >
      This card awards
      :
    </h3>
    <ul
      className="CalloutSection-list"
    >
      <li>
        Compass
      </li>
    </ul>
  </section>
  <section
    className="CalloutSection"
  >
    <h3
      className="CalloutSection-heading"
    >
      It costs
      :
    </h3>
    <ul
      className="CalloutSection-list"
    >
      <li>
        1 Loom
      </li>
    </ul>
  </section>
  <p
    className="Callout-paragraph"
  >
    You cannot afford to build this structure.
  </p>
  <section
    className="CalloutSection"
  >
    <h3
      className="CalloutSection-heading"
    >
      If you have this card, you can build for free
      :
    </h3>
    <ul
      className="CalloutSection-list"
    >
      <li>
        Dispensary
      </li>
      <li>
        Stables
      </li>
    </ul>
  </section>
</section>
`;

exports[`renders without crashing 1`] = `
<section>
  <h2
    className="Callout-title"
  >
    Lumber yard
  </h2>
  <p
    className="Callout-paragraph"
  >
    Type: 
    Raw material
  </p>
  <section
    className="CalloutSection"
  >
    <h3
      className="CalloutSection-heading"
    >
      This card awards
      :
    </h3>
    <ul
      className="CalloutSection-list"
    >
      <li>
        1 Wood
      </li>
    </ul>
  </section>
  <p
    className="Callout-paragraph"
  >
    You can build this structure for free.
  </p>
</section>
`;
